modifying the header and stopped content from overlapping

--- a/css/master.css
+++ b/css/master.css
@@ -25,7 +25,8 @@ header {
     position: fixed;          
     top: 0;                    
     left: 0;                   
-    width: 100%;               
+    width: 100%;     
+    height: 230px;         
     border-bottom: 2px solid white;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -41,7 +42,6 @@ html, body {
 }
 
 section {
-    padding-top: 50px;
     padding-bottom: 50px;
 }
 html {
@@ -50,7 +50,7 @@ html {
 
 main {
     flex: 1;
-    padding-top: 230px;
+    margin-top: 230px;
 }
 
 /* TEXT STYLES */
